# AgentBoot

./: .gitignore  .release-notes-v1.0.0.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  PHASE2_REPORT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: app.py  requirements.txt
docs/: COLLECTOR.md  DEVELOPER.md  OPERATOR.md  USAGE.md
scripts/: agentboot_collector.py  smoke_test.py
src/agentboot/: _errors.py  cli.py  config.py  errors.py  hardware_detector.py  logging_setup.py  os_compatibility.py
src/agentboot/agent/: __init__.py  orchestrator.py  session.py
src/agentboot/autoinstall/: __init__.py  generators.py  profile.py
src/agentboot/flasher/: __init__.py  enumerate.py  flash.py
src/agentboot/iso/: __init__.py  catalog.py  downloader.py
src/agentboot/llm/: base.py  local.py  remote.py  router.py
src/agentboot/serial_link/: __init__.py  protocol.py  transport.py
tests/: test_agent_session.py  test_autoinstall.py  test_cli.py  test_collector_script.py  test_config.py  test_errors.py  test_flasher.py  test_hardware.py  test_hardware_detector.py  test_iso_catalog.py  test_iso_downloader.py  test_llm_router.py  test_local_llm.py  test_logging_setup.py  test_os_compatibility.py  test_serial_link.py
