[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentboot"
version = "1.0.0"
description = "AI agent for bare-metal hardware detection and OS installation — conversationally"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Francisco Angulo de Lafuente", email = "agnuxo1@gmail.com" },
]
keywords = [
    "ai-agent", "llm", "bare-metal", "bootstrapping",
    "hardware-detection", "os-installation", "sysadmin",
    "infrastructure", "devops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Hardware",
]

# Core runtime dependencies — kept minimal so the package is usable
# even without the optional heavy extras.
dependencies = [
    "llama-cpp-python>=0.3.20",
    "huggingface-hub>=0.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# Hardware detection extras
ssh    = ["paramiko>=3.4.0"]
serial = ["pyserial>=3.5"]

# Cloud LLM backends (router fallback when the local model is
# insufficient or unavailable)
cloud = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]

# Demo / UI
demo = ["gradio>=4.36.0"]

# Development toolchain
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "paramiko>=3.4.0",
    "pyserial>=3.5",
    "gradio>=4.36.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]

# Install everything
all = [
    "paramiko>=3.4.0",
    "pyserial>=3.5",
    "gradio>=4.36.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
agentboot = "agentboot.cli:main"
# The Gradio demo is launched via `python demo/app.py`; we do not expose
# it as a console_script because `demo/` is intentionally kept outside
# the installable package (it ships with the repo, not with the wheel).

[project.urls]
Homepage        = "https://github.com/Agnuxo1/AgentBoot"
Repository      = "https://github.com/Agnuxo1/AgentBoot"
Issues          = "https://github.com/Agnuxo1/AgentBoot/issues"
"HF Space Demo" = "https://huggingface.co/spaces/Agnuxo1/agentboot-demo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
